hexo blog source

--- a/source/_posts/写在开始之前.md
+++ b/source/_posts/写在开始之前.md
@@ -3,5 +3,9 @@ title: 写在开始之前
 date: 2018-10-27 23:24:34
 tags: 
 ---
-最近读了一篇博客，[聊聊阿里社招面试，谈谈“野生”Java程序员学习的道路](http://jm.taobao.org/2018/07/09/%E8%81%8A%E8%81%8A%E9%98%BF%E9%87%8C%E7%A4%BE%E6%8B%9B%E9%9D%A2%E8%AF%95%EF%BC%8C%E8%B0%88%E8%B0%88%E2%80%9C%E9%87%8E%E7%94%9F%E2%80%9DJava%E7%A8%8B%E5%BA%8F%E5%91%98%E5%AD%A6%E4%B9%A0%E7%9A%84%E9%81%93%E8%B7%AF/) 感觉自己有点思考。想了一下，我自己的主语言是什么，感觉之前我好想没有什么主语言的概念。
-大学的入门语言是C/C++，毕业前大半年开始接触PHP，毕设也是PHP做的，找的第一份工作也是PHP开发。但是PHP工作半年左右，感觉没有前端赚钱，然后又开始转前端JavaScript。
+最近读了一篇博客，[聊聊阿里社招面试，谈谈“野生”Java程序员学习的道路](http://jm.taobao.org/2018/07/09/%E8%81%8A%E8%81%8A%E9%98%BF%E9%87%8C%E7%A4%BE%E6%8B%9B%E9%9D%A2%E8%AF%95%EF%BC%8C%E8%B0%88%E8%B0%88%E2%80%9C%E9%87%8E%E7%94%9F%E2%80%9DJava%E7%A8%8B%E5%BA%8F%E5%91%98%E5%AD%A6%E4%B9%A0%E7%9A%84%E9%81%93%E8%B7%AF/) 。读后很有感触，想了一下，我自己的主语言是什么，感觉之前我好想没有什么主语言的概念。
+大学的入门语言是C/C++，也就平时上课或者之前刷题的时候用一下，基本没在大型项目中用过。大三下半年开始接触PHP，当时课堂作业有要用PHP搭建教师管理系统，后来的毕设也是PHP做的。毕业后找的第一份工作也是PHP开发，但是PHP却不是我的主语言。工作半年左右，公司招不来前端，再加上前端工资高，又开始转前端JavaScript。转前端之后，学的东西很多很多，一度有点迷茫。除了学习最基础的HTML、CSS，还有jQuery，angular4/5框架、Vue框架、node、工程化等等。一直在学，没有重点。很多都有所了解，但是往深一点却说不出所以然。
+现在想想，之前的各种学习，付出不少，但是都没有抓住重点。想起我刚工作的时候，老大在Google待了三五年的大牛，但是他说他只会一种Pascal语言。当时我PHP中碰到的很多问题，自己查了资料无法解决的，最后都是老大帮忙给提供的思路。现在想想，一门精百门通！
+那么接下来就是要把JS搞精！那么在其基础上形成的各种框架什么的都不成问题！
+
+
